--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,73 @@
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
 body {
   background-color: #dadada;
-  font-size: 10px;
+  font-size: 75%;
+  min-width: 375px;
+}
+
+h1 {
+  font-family: systme-ui, sans-serif;
+  font-size: 1.7em;
+  padding: 1.2em;
+  text-transform: uppercase;
+}
+
+.container {
+  text-align: center;
+  width: 100%;
+}
+
+.preview {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position:center;
+  float: left;
+  height: 280px;
+  margin: 2% 0;
+  width: 100%;
+  text-align: left;
+}
+
+.preview h1 {
+  font-family: serif;
+  text-transform: none;
+}
+
+.baku {
+  background-image: url(/images/baku.jpg);
+  margin-top: 0;
+}
+
+.london {
+  background-image: url(/images/london.png);
+}
+
+.madrid {
+  background-image: url(/images/madrid.jpg);
+}
+
+.rome {
+  background-image: url(/images/rome.jpg);
+}
+
+@media screen and (min-width: 575px) {
+  .container {
+    width: 80%;
+    margin: 0 auto;
+  }
+  .preview {
+    height: 250px;
+    margin: 1%;
+    width: 48%;
+  }
+}
+
+@media screen and (min-width: 991px) {
+  .preview {
+    margin: 1%;
+    width: 22%;
+  }
 }
