--- a/css/style.css
+++ b/css/style.css
@@ -37,20 +37,20 @@ h1 {
 }
 
 .baku {
-  background-image: url(/images/baku.jpg);
+  background-image: url(../images/baku.jpg);
   margin-top: 0;
 }
 
 .london {
-  background-image: url(/images/london.png);
+  background-image: url(../images/london.png);
 }
 
 .madrid {
-  background-image: url(/images/madrid.jpg);
+  background-image: url(../images/madrid.jpg);
 }
 
 .rome {
-  background-image: url(/images/rome.jpg);
+  background-image: url(../images/rome.jpg);
 }
 
 @media screen and (min-width: 575px) {
